MapLayerSettings Popover overflow fix

--- a/packages/itwin/map-layers/src/ui/widget/MapLayerSettingsPopupButton.scss
+++ b/packages/itwin/map-layers/src/ui/widget/MapLayerSettingsPopupButton.scss
@@ -7,14 +7,14 @@
 $hovered-icon-color: $buic-foreground-primary;
 
 .maplayers-settings-popup {
-  /* TODO: z-index workaround while map-layers-react is using the deprecated Popup component from core-react */
-  z-index: 6001; /* one more than floating widget */
-}
+  overflow: auto;
 
-.maplayers-settings-popup-panel {
-  font-size: 12px;
-  margin: 0.5em;
-  width: 340px;
+  .maplayers-settings-popup-panel {
+    font-size: 12px;
+    margin: 0.5em;
+    width: 340px;
+    height: inherit;
+  }
 }
 
 .map-manager-header-buttons-group {
